finnished class loasding

--- a/header.html
+++ b/header.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venera</title>
     <link rel="icon" type="image/x-icon" href="images/icon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Play:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css"/>
 </head>
 <body>
@@ -18,13 +21,3 @@
     <h1 id="text">Venera</h1>
 </section>
 <div id="top" class="navDiv">
-    <img id="navigation-icon" class="navMenu-icon" src="images/menu.svg" onclick="handleMenu()" alt="Menu icon">
-    <nav id="navigation" class="navMenu">
-        <a href="index.php#about-tag">O nás</a>
-        <a href="index.php#music-tag">Hudba</a>
-        <a onclick="showEventPopup()">Akce</a>
-        <a href="gallery.php">Galerie</a>
-        <a class="l" href="index.php#contact-tag">Kontakt</a>
-        <div class="dot"></div>
-    </nav>
-</div>
